Bug 604924 - Make preloaded parser-inserted external scripts wait for style sheets. r=sicking, a=b